prep for reports
index - gatekeeper
prep for session
about page added

simulate time in and out mysql

dashboard bottom for top 3 tapped in and out

--- a/CCIS GateKeeper/index.html
+++ b/CCIS GateKeeper/index.html
@@ -2,15 +2,15 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0;url=dist/index.html">
+    <meta http-equiv="refresh" content="0;url=dist/login.html">
     <title>SB Admin</title>
     <script language="javascript">
-        window.location.href = "dist/index.html"
+        window.location.href = "dist/login.html"
     </script>
 </head>
 
 <body>
-    Go to <a href="dist/index.html">/dist/index.html</a>
+    Go to <a href="dist/login.html">/dist/login.html</a>
 </body>
 
 </html>
