--- a/CCIS GateKeeper/index.html
+++ b/CCIS GateKeeper/index.html
@@ -2,15 +2,15 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0;url=dist/login.html">
-    <title>SB Admin</title>
+    <meta http-equiv="refresh" content="0;url=dist/login.php">
+    <title>CCIS | Internal Systems</title>
     <script language="javascript">
-        window.location.href = "dist/login.html"
+        window.location.href = "dist/login.php";
     </script>
 </head>
 
 <body>
-    Go to <a href="dist/login.html">/dist/login.html</a>
+    Go to <a href="dist/login.php">/dist/login.php</a>
 </body>
 
 </html>
